# emberpost

./: .editorconfig  .pre-commit-config.yaml  CODEOWNERS  LICENSE  README.md  pyproject.toml
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug.yaml  config.yaml  documentation.yaml  feature.yaml
.github/PULL_REQUEST_TEMPLATE/: pull_request_template.yaml
.github/workflows/: codeql.yml  dependabot-auto-approve.yaml  dependabot-auto-update.yaml  notify-pr-ready.yaml  notify-stale-prs.yaml  post.yaml  publish.yaml  pytest.yaml  ruff.yaml  ty.yaml  yaml-validation.yaml
docs/: CONTRIBUTING.md  GOVERNANCE.md  SECURITY.md  SUPPORT.md
examples/: 01-minimal.yaml  02-multi-goalie.yaml  03-full.yaml
schedules/: oncall.yaml
schemas/: schedule.schema.json
src/emberpost/: __init__.py  pagerduty.py  post.py  schedule_config.py  slack.py
tests/: test_clients.py  test_post.py  test_schedule_config.py
tests/schedules/: test-multi-goalie-oncall.yaml
