[build-system]
requires = ["uv_build>=0.11.7,<0.12"]
build-backend = "uv_build"

[project]
name = "emberpost"
version = "0.1.0"
description = "Dispatch PagerDuty on-call schedules to Slack."
readme = "README.md"
requires-python = ">=3.14,<3.15"
dependencies = [
  "jsonschema",
  "pagerduty>=6.2.1",
  "pyyaml>=6.0.3",
  "slack-sdk>=3.41.0",
]

[project.scripts]
emberpost = "emberpost.post:main"

[dependency-groups]
dev = [
  "pytest-cov==7.1.0",
  "pytest==9.1.1",
  "prek==0.4.10",
  "check-jsonschema",
  "ruff",
  "ty",
]

[tool.ty.environment]
python = ".venv"

[tool.pytest.ini_options]
pythonpath = "src"
addopts = "-s -v --cov=emberpost --cov-report=term-missing --cov-fail-under=50"
norecursedirs = [".git", "__pycache__", ".venv"]
testpaths = ["tests"]

[tool.coverage.run]
omit = [
    "tests/*",
]


[tool.ruff]
# https://docs.astral.sh/ruff/settings/
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
]
line-length = 88
indent-width = 4
target-version = "py314"

[tool.ruff.lint]
select = ["N", "E4", "E7", "E9", "F"]
ignore = []
task-tags = ["TODO", "FIXME", "HACK"]
fixable = ["ALL"]
unfixable = []
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = true
line-ending = "auto"
